[gd_scene load_steps=5 format=3 uid="uid://dx10hkpffvam7"]

[ext_resource type="PackedScene" uid="uid://cbsmy8l7srlc1" path="res://enemy/enemy_Base.tscn" id="1_mj3h6"]
[ext_resource type="Script" uid="uid://kei166y1fge6" path="res://enemy/enemy_Ghoul/enemy_Ghoul.gd" id="2_4jn1o"]
[ext_resource type="PackedScene" uid="uid://diyefkios6nos" path="res://common/anim_spritesheet/anim_spritesheet.tscn" id="3_wchuc"]
[ext_resource type="PackedScene" uid="uid://cik3upi2rmml6" path="res://common/pulse_effect/pulse_effect.tscn" id="4_4n3ik"]

[node name="enemy_Ghoul" instance=ExtResource("1_mj3h6")]
script = ExtResource("2_4jn1o")

[node name="anim_spritesheet" parent="." index="9" instance=ExtResource("3_wchuc")]

[node name="animation_player" type="AnimationPlayer" parent="anim_spritesheet" index="0"]

[node name="pulse_effect" parent="." index="10" instance=ExtResource("4_4n3ik")]
