[gd_scene load_steps=12 format=3 uid="uid://dx10hkpffvam7"]

[ext_resource type="PackedScene" uid="uid://cbsmy8l7srlc1" path="res://scenes/game_object/enemy/enemy_Base.tscn" id="1_mj3h6"]
[ext_resource type="Script" uid="uid://kei166y1fge6" path="res://scenes/game_object/enemy/enemy_Ghoul/enemy_Ghoul.gd" id="2_4jn1o"]
[ext_resource type="PackedScene" uid="uid://lhdn4v5vc3cd" path="res://scenes/enemy_skill/enemy_skill_MeleeAttack/enemy_skill_MeleeAttack.tscn" id="3_3cwum"]
[ext_resource type="PackedScene" uid="uid://diyefkios6nos" path="res://scenes/components/animation_handler/animation_handler.tscn" id="3_wchuc"]
[ext_resource type="Shader" uid="uid://dd7xij77hfa8a" path="res://scenes/components/hit_flash/shader/hit_flash.gdshader" id="3_ytej5"]
[ext_resource type="PackedScene" uid="uid://cik3upi2rmml6" path="res://scenes/components/pulse_effect/pulse_effect.tscn" id="4_4n3ik"]
[ext_resource type="Texture2D" uid="uid://boayljul7g3yn" path="res://scenes/game_object/enemy/enemy_Ghoul/sprites/Walk.png" id="5_vdh2k"]
[ext_resource type="AnimationLibrary" uid="uid://c43btgtfyc5mq" path="res://scenes/game_object/enemy/enemy_Ghoul/animation/enemy_ghoul_lib.tres" id="7_ytej5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7g67l"]
resource_local_to_scene = true
shader = ExtResource("3_ytej5")
shader_parameter/lerp_percent = 0.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3cwum"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vdh2k"]
radius = 7.0

[node name="enemy_Ghoul" instance=ExtResource("1_mj3h6")]
script = ExtResource("2_4jn1o")

[node name="look" parent="." index="3" node_paths=PackedStringArray("visual_node")]
is_base_sprite_looking_left = false
visual_node = NodePath("../visuals")

[node name="hit_flash" parent="." index="6" node_paths=PackedStringArray("sprite")]
hit_flash_material = SubResource("ShaderMaterial_7g67l")
sprite = NodePath("../visuals/sprite_2d")

[node name="attack_manager" parent="." index="7"]
cooldown_duration = 3.5

[node name="enemy_skill_MeleeAttack" parent="attack_manager" index="3" instance=ExtResource("3_3cwum")]

[node name="hitbox" parent="." index="10"]
damage_amount = 1.0

[node name="collision_shape_2d" type="CollisionShape2D" parent="hitbox" index="0"]
position = Vector2(0, -15)
shape = SubResource("CapsuleShape2D_3cwum")

[node name="collision_shape_2d" type="CollisionShape2D" parent="hurtbox" index="0"]
position = Vector2(0, -15)
shape = SubResource("CapsuleShape2D_3cwum")

[node name="sprite_2d" type="Sprite2D" parent="visuals" index="0"]
position = Vector2(2, -16)
texture = ExtResource("5_vdh2k")
hframes = 9
region_rect = Rect2(0, 0, 558, 33)

[node name="pulse_effect" parent="." index="13" instance=ExtResource("4_4n3ik")]

[node name="collision_shape_2d" type="CollisionShape2D" parent="." index="14"]
position = Vector2(0, -13)
shape = SubResource("CircleShape2D_vdh2k")
debug_color = Color(0.9764706, 0, 0.0627451, 0.41960785)

[node name="animation_handler" parent="." index="15" node_paths=PackedStringArray("anim_player") instance=ExtResource("3_wchuc")]
anim_player = NodePath("../animation_player")

[node name="animation_player" type="AnimationPlayer" parent="." index="16"]
root_node = NodePath("../animation_handler")
libraries = {
&"enemy_ghoul_lib": ExtResource("7_ytej5")
}
